--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Maintainer: Victor Freguglia <victorfreguglia@gmail.com>
 BugReports: https://github.com/Freguglia/ggfocus/issues
 URL: https://github.com/Freguglia/ggfocus
 Description: A ggplot2 extension that provides tools for automatically focusing specific factor levels.
-License: MIT
+License: MIT + LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
