--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: ggfocus
 Type: Package
-Title: Focus on specific factor levels in your ggplot.
+Title: Focus on Specific Factor Levels in your Ggplot
 Version: 0.8
 Author: Victor Freguglia
 Maintainer: Victor Freguglia <victorfreguglia@gmail.com>
 BugReports: https://github.com/Freguglia/ggfocus/issues
 URL: https://github.com/Freguglia/ggfocus
 Description: A ggplot2 extension that provides tools for automatically focusing specific factor levels.
-License: MIT + LICENSE
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports: magrittr, dplyr, rlang, RColorBrewer
-Depends: ggplot2
+Imports: magrittr, dplyr, rlang, RColorBrewer, ggplot2
