--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,10 @@
 
 export(ggfocus)
 importFrom(dplyr,select)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,scale_alpha_manual)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
 importFrom(rlang,enquo)
