Updated title because of CRAN

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ggfocus
 Type: Package
-Title: Focus on Specific Factor Levels in your 'Ggplot'
+Title: Focus on Specific Factor Levels in your ggplot()
 Version: 0.8
 Author: Victor Freguglia
 Maintainer: Victor Freguglia <victorfreguglia@gmail.com>
