--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports: magrittr, dplyr, rlang, RColorBrewer, ggplot2
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
