--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,15 @@ Description: A 'ggplot2' extension that provides tools for automatically focusin
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 Depends: ggplot2
-Imports: magrittr, dplyr, rlang, RColorBrewer
+Imports: 
+    magrittr, 
+    dplyr, 
+    rlang, 
+    RColorBrewer
 Suggests: 
     knitr,
     rmarkdown,
-    gapminder,
     ggmap
 VignetteBuilder: knitr
