--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,10 @@ export(ggfocus)
 export(scale_alpha_focus)
 export(scale_color_focus)
 export(scale_fill_focus)
-importFrom(dplyr,select)
+importFrom(dplyr,select_)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,ggplot_add)
 importFrom(ggplot2,scale_alpha_manual)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(magrittr,"%>%")
-importFrom(rlang,"!!")
-importFrom(rlang,enquo)
