--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,4 @@ importFrom(ggplot2,scale_alpha_manual)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(magrittr,"%>%")
+importFrom(rlang,enquo)
