Added alias so color and colour are equivalent.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export()
 export(ggfocus)
 export(scale_alpha_focus)
 export(scale_color_focus)
+export(scale_colour_focus)
 export(scale_fill_focus)
 importFrom(dplyr,select_)
 importFrom(ggplot2,aes)
