* scale_focus functions now use tidyeval. * Improved error messages.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(scale_alpha_focus)
 export(scale_color_focus)
 export(scale_colour_focus)
 export(scale_fill_focus)
+importFrom(dplyr,mutate)
 importFrom(dplyr,select_)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,ggplot_add)
