--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(ggplot_add,ggfocus_alpha)
 S3method(ggplot_add,ggfocus_color)
 S3method(ggplot_add,ggfocus_fill)
+S3method(ggplot_add,ggfocus_size)
 export("%>%")
 export()
 export(ggfocus)
@@ -10,6 +11,7 @@ export(scale_alpha_focus)
 export(scale_color_focus)
 export(scale_colour_focus)
 export(scale_fill_focus)
+export(scale_size_focus)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select_)
 importFrom(ggplot2,aes)
@@ -17,5 +19,6 @@ importFrom(ggplot2,ggplot_add)
 importFrom(ggplot2,scale_alpha_manual)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_size_manual)
 importFrom(magrittr,"%>%")
 importFrom(rlang,enquo)
