--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(ggplot_add,ggfocus_alpha)
 S3method(ggplot_add,ggfocus_color)
 S3method(ggplot_add,ggfocus_fill)
+S3method(ggplot_add,ggfocus_shape)
 S3method(ggplot_add,ggfocus_size)
 export("%>%")
 export()
@@ -11,6 +12,7 @@ export(scale_alpha_focus)
 export(scale_color_focus)
 export(scale_colour_focus)
 export(scale_fill_focus)
+export(scale_shape_focus)
 export(scale_size_focus)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select_)
