Resolved NAMESPACE note on CHECK.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(ggplot2,ggplot_add)
 importFrom(ggplot2,scale_alpha_manual)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_shape_manual)
 importFrom(ggplot2,scale_size_manual)
 importFrom(magrittr,"%>%")
 importFrom(rlang,enquo)
