--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(ggplot_add,ggfocus_alpha)
 S3method(ggplot_add,ggfocus_color)
 S3method(ggplot_add,ggfocus_fill)
+S3method(ggplot_add,ggfocus_linetype)
 S3method(ggplot_add,ggfocus_shape)
 S3method(ggplot_add,ggfocus_size)
 export("%>%")
@@ -12,6 +13,7 @@ export(scale_alpha_focus)
 export(scale_color_focus)
 export(scale_colour_focus)
 export(scale_fill_focus)
+export(scale_linetype_focus)
 export(scale_shape_focus)
 export(scale_size_focus)
 importFrom(dplyr,mutate)
@@ -21,6 +23,7 @@ importFrom(ggplot2,ggplot_add)
 importFrom(ggplot2,scale_alpha_manual)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_linetype_manual)
 importFrom(ggplot2,scale_shape_manual)
 importFrom(ggplot2,scale_size_manual)
 importFrom(magrittr,"%>%")
