--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: ggfocus
 Type: Package
 Title: Special Scales that Focus Specific Levels in your ggplot()
-Version: 0.9.9999
-Author: Victor Freguglia
-Maintainer: Victor Freguglia <victorfreguglia@gmail.com>
+Version: 1.0.9000
+Authors@R: person("Victor", "Fregugglia", email = "victorfreguglia@gmail.com",
+                  role = c("aut", "cre"))
 BugReports: https://github.com/Freguglia/ggfocus/issues
 URL: https://github.com/Freguglia/ggfocus
 Description: A 'ggplot2' extension that provides tools for automatically
