--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
-Depends: ggplot2
+Depends: 
+  R (>= 4.1.0),
+  ggplot2
 Imports: 
     dplyr, 
     rlang, 
